Added nlog config file

--- a/nlog_with_stackdriver.csproj
+++ b/nlog_with_stackdriver.csproj
@@ -10,4 +10,9 @@
     <PackageReference Include="nlog" Version="4.6.5" />
   </ItemGroup>
 
+  <ItemGroup>
+    <None Update="nlog.config">
+      <CopyToOutputDirectory>Always</CopyToOutputDirectory>
+    </None>
+  </ItemGroup>
 </Project>
