--- a/nlog.config
+++ b/nlog.config
@@ -5,45 +5,29 @@
       internalLogLevel="info"
       internalLogFile="internal-nlog.txt">
 
-  <!-- enable asp.net core layout renderers -->
   <extensions>
     <add assembly="Google.Cloud.Logging.NLog"/>
   </extensions>
 
   <!-- the targets to write to -->
   <targets>
-    <!-- write logs to file  -->
-    <target name="asyncLogFile" xsi:type="AsyncWrapper">
-      <target 
-        xsi:type="File" 
-        name="logfile" 
-        fileName="log/log-${shortdate}.txt"
-        archiveFileName="log/archive/log-${shortdate}.txt"
-        keepFileOpen="true"
-        archiveAboveSize="20000000"
-        concurrentWrites="false"
-        archiveEvery="Day"
-        layout="${longdate}|${event-properties:item=EventId_Id}|${uppercase:${level}}|${logger}|${message} ${exception:format=tostring}" />
-    </target>
-
     <target name="asyncConsole" xsi:type="AsyncWrapper">
       <target name="console" 
               xsi:type="ColoredConsole"
-              layout="${date} ${threadname:whenEmpty=${threadid}} ${level:uppercase=true} ${logger} ${message} ${onexception:${stexception}}" />
+              layout="${date} ${threadname:whenEmpty=${threadid}} ${level:uppercase=true} ${logger} ${message} ${onexception:${exception}}" />
     </target>
 
     <target name="asyncStackDriver" xsi:type="AsyncWrapper">
       <target name="stackDriver" 
               xsi:type="GoogleStackdriver" 
-              projectId="spatial-ship-226001"
-              layout="${longdate}|${event-properties:item=EventId_Id}|${uppercase:${level}}|${logger}|${message} ${exception:format=tostring}" />
+              logId="Default"
+              layout="${longdate}|${uppercase:${level}}|${logger}|${message} ${exception:format=tostring}" />
     </target>  
   </targets>
 
   <!-- rules to map from logger name to target -->
   <rules>
     <!--All logs-->
-    <logger name="*" minlevel="Trace" writeTo="asyncLogFile" />
     <logger name="*" minlevel="Trace" writeTo="asyncConsole" />
     <logger name="*" minlevel="Trace" writeTo="asyncStackDriver" />
 
